# stl_compaitable_allocator

./: .travis.yml  CMakeLists.txt  allocator.h  custom_forward_list.h  main.cpp
scripts/: gtest_install_script.sh
src/: CMakeLists.txt  allocator.h  custom_forward_list.h  main.cpp
tests/: CMakeLists.txt  test_allocator.cpp
